--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,26 +18,26 @@
 
   <ion-card>
     <img src="assets/imgs/book.jpeg"/>
-    <div class="card-title">Author name</div>
-    <div class="card-subtitle">Title<br> <small>01-01-2018</small></div>
+    <div class="card-title">Programming</div>
+    <div class="card-subtitle">Author: Joseph My<br> <small>01-01-2018</small></div>
   </ion-card>
 
   <ion-card>
     <img src="assets/imgs/book.jpeg"/>
-    <div class="card-title">Author name</div>
-    <div class="card-subtitle">Title <br><small>01-01-2018</small></div>
+    <div class="card-title">Android Studio</div>
+    <div class="card-subtitle">Author: Maitre Gyms <br><small>05-012-1999</small></div>
   </ion-card>
 
   <ion-card>
     <img src="assets/imgs/book.jpeg"/>
-<div class="card-title">Author name</div>
-    <div class="card-subtitle">Title<br> <small>01-01-2018</small></div>
+<div class="card-title">Database System</div>
+    <div class="card-subtitle">Author: Lefa<br> <small>03-04-2002</small></div>
   </ion-card>
 
   <ion-card>
     <img src="assets/imgs/book.jpeg"/>
-<div class="card-title">Author name</div>
-    <div class="card-subtitle">Title<br> <small>01-01-2018</small></div>
+<div class="card-title">System Analysis</div>
+    <div class="card-subtitle">Author: Black M<br> <small>20-09-2010</small></div>
   </ion-card>
 
 </ion-content>
