--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -10,5 +10,56 @@
 </ion-header>
 
 <ion-content padding>
-	This page has no tabs!
+	<!-- <ion-item>
+	<ion-badge color="secondary"></ion-badge>
+
+  <ion-icon name="logo-twitter" item-start></ion-icon>
+  Followers
+  <ion-badge item-end>260k</ion-badge>
+</ion-item> -->
+
+
+
+<ion-list>
+  <ion-item (click)="bookdetail()">
+    <ion-avatar item-start>
+      <img src="assets/imgs/book.jpeg">
+    </ion-avatar>
+    <h2>Linux</h2>
+    <!-- <h3>Date: 2018-01-02</h3> -->
+    <p>Date: 2018-01-02</p>
+  </ion-item>
+  <ion-item (click)="bookdetail()">
+    <ion-avatar item-start>
+      <img src="assets/imgs/book.jpeg">
+    </ion-avatar>
+    <h2>Database</h2>
+    <!-- <h3>Don't Know What To Do!</h3> -->
+    <p>Date: 2018-01-02</p>
+  </ion-item>
+  <ion-item (click)="bookdetail()">
+    <ion-avatar item-start>
+      <img src="assets/imgs/book.jpeg">
+    </ion-avatar>
+    <h2>Programming</h2>
+    <!-- <h3>Don't Know What To Do!</h3> -->
+    <p>Date: 2018-01-02</p>
+  </ion-item>
+  <ion-item (click)="bookdetail()">
+    <ion-avatar item-start>
+      <img src="assets/imgs/book.jpeg">
+    </ion-avatar>
+    <h2>Android Studio</h2>
+    <!-- <h3>Don't Know What To Do!</h3> -->
+    <p>Date: 2018-01-02</p>
+  </ion-item>
+  <ion-item (click)="bookdetail()">
+    <ion-avatar item-start>
+      <img src="assets/imgs/book.jpeg">
+    </ion-avatar>
+    <h2>Laravel</h2>
+    <!-- <h3>Don't Know What To Do!</h3> -->
+    <p>Date: 2018-01-02</p>
+  </ion-item>
+</ion-list>
 </ion-content>
