--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -10,5 +10,22 @@
 </ion-header>
  
 <ion-content padding>
-  This page has no tabs!
+  <ion-list>
+  <ion-item>
+    <ion-icon name="information-circle" item-start color="primary"></ion-icon>
+      About us
+  </ion-item>
+  <ion-item>
+    <ion-icon name="bookmark" item-start color="primary"></ion-icon>
+      Version
+  </ion-item>
+  <ion-item>
+    <ion-icon name="text" item-start color="primary"></ion-icon>
+      Feedback
+  </ion-item>
+  <ion-item>
+    <ion-icon name="log-out" item-start color="danger"></ion-icon>
+      Log out
+  </ion-item>
+</ion-list>
 </ion-content>
