--- a/src/pages/share/share.html
+++ b/src/pages/share/share.html
@@ -11,5 +11,26 @@
 
 
 <ion-content padding>
-
+<ion-list>
+  <ion-item>
+    <ion-icon name="logo-whatsapp" item-start color="primary"></ion-icon>
+      Whatsapp
+  </ion-item>
+  <ion-item>
+    <ion-icon name="logo-facebook" item-start color="primary"></ion-icon>
+      Facebook
+  </ion-item>
+  <ion-item>
+    <ion-icon name="logo-instagram" item-start color="primary"></ion-icon>
+      Instagram
+  </ion-item>
+  <ion-item>
+    <ion-icon name="logo-twitter" item-start color="primary"></ion-icon>
+      Twitter
+  </ion-item>
+   <ion-item>
+    <ion-icon name="mail" item-start color="primary"></ion-icon>
+      Mail
+  </ion-item>
+</ion-list>
 </ion-content>
