--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -14,5 +14,10 @@
 
 
 <ion-content padding>
-
+<ion-searchbar
+  [(ngModel)]="myInput"
+  [showCancelButton]="shouldShowCancel"
+  (ionInput)="onInput($event)"
+  (ionCancel)="onCancel($event)">
+</ion-searchbar>
 </ion-content>
